--- a/templates/macros/effect-creator.hbs
+++ b/templates/macros/effect-creator.hbs
@@ -1,18 +1,26 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-  <div class="base-form__content">
-    <div class="base-form__callout base-form__callout--information">
-      <i class="fas fa-info-circle"></i>
-      {{#if (eq playerMode true)}}
+  <header class="base-form__callout-box">
+    {{#if (eq playerMode true)}}
+      <div class="base-form__callout base-form__callout--information">
+        <i class="fas fa-info-circle"></i>
         {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.PlayerMode" count=selectedArray.length}}}
-      {{/if}}
-      {{#if (eq playerMode false)}}
-        {{#if (eq targetArray.length 0)}}
+      </div>
+    {{/if}}
+    {{#if (eq playerMode false)}}
+      {{#if (eq targetArray.length 0)}}
+        <div class="base-form__callout base-form__callout--information">
+          <i class="fas fa-info-circle"></i>
           {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.NoTargets"}}}
-        {{else}}
+        </div>
+      {{else}}
+        <div class="base-form__callout base-form__callout--information">
+          <i class="fas fa-info-circle"></i>
           {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.WithTargets" count=targetArray.length}}}
-        {{/if}}
+        </div>
       {{/if}}
-    </div>
+    {{/if}}
+  </header>
+  <div class="base-form__content">
     <div class="base-form__group">
       <label class="base-form__label" for="type">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Type"}}}:</label>
       <select class="base-form__select" id="type" name="type">
