--- a/templates/macros/change-target-status.hbs
+++ b/templates/macros/change-target-status.hbs
@@ -1,9 +1,12 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-  <div class="base-form__content">
+  <header class="base-form__callout-box">
     <div class="base-form__callout base-form__callout--information">
       <i class="fas fa-info-circle"></i>
       {{localize "EVENTIDE_RP_SYSTEM.Forms.ScriptExplanations.ChangeTargetStatus"}}
     </div>
+  </header>
+
+  <div class="base-form__content">
     <div class="base-form__group">
       <label class="base-form__label" for="statusSelector">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Status"}}:</label>
       <select class="base-form__select" id="statusSelector" name="statusSelector">
