--- a/templates/macros/popups/feature-popup.hbs
+++ b/templates/macros/popups/feature-popup.hbs
@@ -1,5 +1,5 @@
 <div class="{{cssClass}} popup-form" autocomplete="off">
-    <div class="base-form__content">
+    <div class="base-form__main">
         <div class="chat-card chat-card__header chat-card__header--feature">
             <img src="{{item.img}}" class="chat-card__image--primary" /> 
             <div>{{item.name}}</div>
