--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -1290,12 +1290,15 @@
 
 .popup-form {
   max-height: 90vh;
-  overflow-y: auto;
+  overflow-y: hidden;
   -ms-overflow-style: initial;
   scrollbar-width: thin;
   scrollbar-color: var(--eventide-rp-system-input-focus) transparent;
   font-family: "Underdog", serif;
   margin: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 .popup-form::-webkit-scrollbar {
   width: 6px;
@@ -1365,6 +1368,36 @@
   font-size: 1.3rem;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
+.popup-form__main {
+  flex: 1;
+  margin: 0.25rem;
+  padding: 0.25rem;
+  border-radius: 4px;
+  text-align: center;
+  overflow-y: auto;
+  max-height: calc(90vh - 100px);
+  /* Add blue scrollbar styling */
+  -ms-overflow-style: initial;
+  scrollbar-width: thin;
+  scrollbar-color: var(--eventide-rp-system-input-focus) transparent;
+}
+.popup-form__main::-webkit-scrollbar {
+  width: 6px;
+  background-color: transparent;
+  display: block;
+}
+.popup-form__main::-webkit-scrollbar-thumb {
+  background-color: var(--eventide-rp-system-input-focus);
+  border-radius: 10px;
+  border: 1px solid var(--eventide-rp-system-input-bg);
+}
+.popup-form__main::-webkit-scrollbar-thumb:hover {
+  background-color: var(--eventide-rp-system-primary-button-hover);
+}
+.popup-form__main::-webkit-scrollbar-track {
+  background-color: transparent;
+  margin: 0;
+}
 .popup-form__content {
   flex: 1;
   margin: 0.25rem;
@@ -1372,17 +1405,21 @@
   border-radius: 4px;
   text-align: center;
 }
+.popup-form__content--data {
+  background-color: var(--eventide-rp-system-form-content-bg);
+}
 .popup-form__content--usage {
   font-size: 1.1rem;
   padding: 0.5rem;
   white-space: normal;
   text-align: justify;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(16, 26, 41, 0.5);
   border-radius: 4px;
   border-left: 3px solid #cb8e00;
   line-height: 1.4;
 }
 .popup-form__content--description {
+  background-color: var(--eventide-rp-system-form-content-bg);
   overflow-y: visible;
   height: auto;
   white-space: normal;
@@ -1787,8 +1824,12 @@
   margin-top: 10px;
   display: flex;
   width: 100%;
-  flex: 0 0 auto; /* Prevent footer from scrolling */
+  flex: 0 0 auto;
   justify-content: flex-end;
+  position: sticky;
+  bottom: 0;
+  background-color: inherit;
+  z-index: 10;
   /* Make the submit button take appropriate width */
 }
 .popup-form__footer .popup-form__button--primary {
@@ -1803,6 +1844,10 @@
   margin-bottom: 3px;
   display: flex;
   flex: 0 0 auto;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: inherit;
 }
 .popup-form__callout {
   border-radius: 8px;
