--- a/templates/macros/popups/combat-power-popup.hbs
+++ b/templates/macros/popups/combat-power-popup.hbs
@@ -7,7 +7,7 @@
             <div class="popup-form__callout popup-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Power.InsufficientPower" cost=item.system.cost actorPower=item.actor.system.power.value}}</div>
         {{/if}}
     </header>
-    <div class="base-form__content">
+    <div class="popup-form__main">
         <!-- Warnings -->
         
         <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
@@ -25,17 +25,17 @@
             <div class="popup-form__group">
                 <div class="popup-form__row">
                     <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</div>
-                    <div class="popup-form__content">{{item.system.roll.type}}</div>
+                    <div class="popup-form__content popup-form__content--data">{{item.system.roll.type}}</div>
                     <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAbility"}}</div>
-                    <div class="popup-form__content">{{item.system.roll.ability}}</div>
+                    <div class="popup-form__content popup-form__content--data">{{item.system.roll.ability}}</div>
                 </div>
             </div>
             <div class="popup-form__group">
                 <div class="popup-form__row">
                     <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Bonus"}}</div>
-                    <div class="popup-form__content">{{numberFormat item.system.roll.bonus decimals=0 sign=true}}</div>
+                    <div class="popup-form__content popup-form__content--data">{{numberFormat item.system.roll.bonus decimals=0 sign=true}}</div>
                     <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adjustments"}}</div>
-                    <div class="popup-form__content">
+                    <div class="popup-form__content popup-form__content--data">
                         {{#if (eq item.system.roll.diceAdjustments.total 0)}}
                             <span class="popup-form__text--neutral">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Neutral"}}</span>
                         {{else if (lt item.system.roll.diceAdjustments.total 0)}}
@@ -52,7 +52,7 @@
         {{#if item.system.prerequisites}}
         <div class="popup-form__section">
             <div class="popup-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Prerequisites"}}</div>
-            <div class="popup-form__content">{{item.system.prerequisites}}</div>
+            <div class="popup-form__content popup-form__content--data">{{item.system.prerequisites}}</div>
         </div>
         {{/if}}
 
