Began to implement new power system: including changes to base actor to have new keys available and changes to settings to allow for them to be implemented.

--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -20,6 +20,7 @@
 @use 'components/gear-creator';
 @use 'components/initiative-roll';
 @use 'components/sound-settings';
+@use 'components/message-settings';
 
 .eventide-rp-system {
   @include meta.load-css('components/forms');
