Fixed integration regression for gear creator image selector.

--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -41,6 +41,7 @@
             src="{{storedData.gear_img}}"
             data-edit="img"
             data-action='onEditImage'
+            data-target="img"
             title="{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Image"}}"
             name="displayImage"
             id="displayImage"
